# RGBDConverter

./: .gitignore  README.md  RGBDConverter.sln
RGBDConverter/: CMakeLists.txt  DataCompression.cpp  DataCompression.h  RGBDConverter  RGBDConverter.cpp  RGBDConverter.h  RGBDConverter.vcxproj  RGBDConverter.vcxproj.filters  global.h  main.cpp
